# Bewm

./: CMakeLists.txt  README.md
res/: map1.txt
src/: game.cpp  game.h  main.cpp  options.h  player.cpp  player.h  ray.cpp  ray.h
